# TaskForTest_EVLapshin

./: CMakeLists.txt  MakeSln.sh  ReadMe.txt
src/client/: CMakeLists.txt  client.cpp
src/common/: CMakeLists.txt  Cmd_Off.cpp  Cmd_Off.h  Cmd_SetColor.cpp  Cmd_SetColor.h  DataStreamParser.cpp  DataStreamParser.h  MySocket.cpp  MySocket.h  ParserMap.cpp  ParserMap.h  Parsing.cpp  cmd_on.cpp  cmd_on.h  data_type.h  iCmd.h
src/server/: CMakeLists.txt  server.cpp
